<resources>
    <string name="app_name">Seguimiento de correos</string>
    <string name="parcel_name">Nombre del paquete (opcional)</string>
    <string name="parcel_code">Código de seguimiento</string>
    <string name="ultimo_estado_header">Último estado</string>
    <string name="refresh_all">Actualizar todos</string>
    <string name="delete">Eliminar</string>
    <string name="refresh">Actualizar</string>
    <string name="clipboard_copied">El código ha sido copiado al portapapeles.</string>
    <string name="incoming">Lo voy a recibir</string>
    <string name="outgoing">Lo he enviado</string>
    <string name="stance">Dirección</string>
    <string name="lastchecked">Comprobado:  %1$s</string>
    <string name="error_unrecognized">Se produjo un error, por favor inténtalo más tarde.</string>
    <string name="unrecognized_code">El código introducido no es válido. Por favor, verifique que es correcto.</string>
    <string name="masinfo_ref">Num. referencia:</string>
    <string name="masinfo_codproducto">Cod. Producto:</string>
    <string name="masinfo_dimensiones">Dimensiones:</string>
    <string name="masinfo_peso">Peso:</string>
    <string name="masinfo_fechaestimada">Fecha Estimada*:</string>
    <string name="masinfo_disclaimer">*NOTA: La fecha calculada es estimada por correos y en ningún momento debe tomarse como dato fiable.</string>
    <string name="dimensiones_placeholder" translatable="false"> %1$sx%2$sx%3$s</string>
    <string name="peso_placeholder" translatable="false">%1$s gr.</string>
    <string name="error_nocodigo">Por favor introduce el código de seguimiento.</string>
    <string name="emptystate_parcel_list">Todavía no has introducido ningún paquete.</string>
    <string name="status_title">ESTADO</string>
    <string name="scan_prompt">Escanea el código de barras</string>
    <string name="status_unknown">Estado desconocido</string>
    <string name="error_no_network">No hay conexión a internet</string>
    <string name="create_parcel_only_correos">* Solo paquetes de Correos España o Correos Express</string>
    <string name="create_parcel_error_codigo">El código introducido no parece ser reconocido por Correos. ¿Estás seguro de querer guardarlo?</string>
    <string name="new_event_single">New event on parcel %1$s: %2$s!</string>
    <string name="new_events_multiple">New events on %1$d parcels!</string>
    <string name="notification_title">Status change</string>
    <string name="channel_name">Status updates</string>
    <string name="channel_description">Get status updates of your parcels</string>
    <string name="menu_enable_notifications">Enable notifications</string>
    <string name="menu_disable_notifications">Disable notifications</string>
    <string name="parcel_status_alerts">Activar notificaciones</string>
    <string name="feature_dialog_title">Novedades</string>
    <string name="feature_dialog_opensource">Esta app NO tiene afiliación alguna con la Sociedad Estatal Correos y Telégrafos, S.A. sino que ha sido creada por un desarrollador independiente. Seguimiento Correos es gratuita y open source y no tiene anuncios.</string>
    <string name="feature_dialog_opensource_contribute">Si quieres contribuir con el proyecto haz una donación a través de Kofi:</string>
    <string name="about">Acerca de</string>
    <string name="changes_1_6_0">Soporte para tema oscuro</string>
    <string name="changes_1_6_2">Ahora puedes introducir tus paquetes escaneando el código de barras de tu recibo</string>
    <string name="changes_1_6_5">Soporte para paquetes de Correos Express</string>
    <string name="changes_1_7_0">Llevábais tiempo pidiéndolo y ya está disponible: ahora recibirás alertas cada vez que uno de tus paquetes cambie de estado</string>
    <string name="changes_1_7_2">Corregido bug que hacía que no se mostrasen las notificaciones en algunos móviles.</string>
    <string name="changes_1_8_0">Incorporado buscador de paquetes.</string>
    <string name="create_parcel_error_codigo_title">Código incorrecto</string>
    <string name="delete_confirm_title">Eliminar paquete</string>
    <string name="delete_confirm_desc">¿Estás seguro de que deseas eliminar el paquete seleccionado?</string>
    <string name="search">Filter</string>
    <string name="code_helper_text">*Solo paquetes de Correos España o Correos Express</string>
    <string name="changes_1_9_0" >Se permiten varios paquetes con el mismo número de seguimiento.</string>
    <string name="menu_theme">Tema</string>
    <string name="theme_light">Claro</string>
    <string name="theme_dark">Oscuro</string>
    <string name="theme_system">Igual que el sistema</string>
    <string name="theme_title">Elige un tema</string>
    <string name="copy">Copiar</string>
    <string name="changes_1_9_5">Dark theme config</string>
    <string name="changes_2_0_0">Reestructuracion de codigo</string>
    <string name="visit_us_github">Visítanos en github</string>
    <string name="changes_2_1_0">Se ha eliminado el soporte para Correos Express.</string>
    <string name="inapp_title">Valóranos</string>
    <string name="inapp_message">¿Te gusta Seguimiento Correos? Déjanos una valoración positiva.</string>
    <string name="changes_2_2_6">Implementa nuevos servicios de Correos, que no incluyen Unidad.</string>
    <string name="changes_2_2_7">Vuelve la trazabilidad por localización a la app.</string>
</resources>
