<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/app_search"
        android:icon="@drawable/ic_search"
        android:visible="true"
        app:showAsAction="always|collapseActionView"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        android:title="@string/search"/>

    <item
        android:id="@+id/app_refresh_all"
        android:icon="@drawable/ic_refresh"
        android:visible="true"
        app:showAsAction="never"
        android:title="@string/refresh_all"/>

    <item
        android:id="@+id/app_about"
        android:icon="@drawable/ic_info_black_24dp"
        android:visible="true"
        app:showAsAction="never"
        android:title="@string/about"/>


</menu>