<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/double_spacing">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/parcel_code_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:hint="@string/parcel_code"
        android:importantForAutofill="no"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/parcel_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:inputType="textCapCharacters"
            android:maxLines="1"
            android:text="" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/parcel_name_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/parcel_name"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:importantForAutofill="no"
        app:errorEnabled="false">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/parcel_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:importantForAutofill="noExcludeDescendants"
            android:inputType="textNoSuggestions|textCapSentences"
            android:maxLines="1"
            tools:targetApi="o" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/stance"
            android:textColor="@color/colorAccent"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/stance_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="16dp"
            android:paddingBottom="16dp">

            <RadioButton
                android:id="@+id/stance_incoming"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/incoming" />

            <RadioButton
                android:id="@+id/stance_outgoing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/outgoing" />

        </RadioGroup>
    </LinearLayout>

    <Button
        android:id="@+id/create_ok"
        style="?android:borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:text="@android:string/ok"
        android:textColor="@color/white" />
</LinearLayout>